--- a/bookclubproj.client/src/index.html
+++ b/bookclubproj.client/src/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-<h1>Добро пожаловать в Книжный клуб!</h1>
+<h1>BookClub</h1>
   <app-root></app-root>
 
 </body>
